Добавлено представление для отображения списка подльзователей Добавлен метод для получения списка пользователей в контроллер UserController

--- a/MyBlog.App/Views/User/Register.cshtml
+++ b/MyBlog.App/Views/User/Register.cshtml
@@ -1,4 +1,4 @@
-﻿@model MyBlog.App.ViewModels.User.UserRegisterViewModel
+﻿@model MyBlog.App.ViewModels.Users.UserRegisterViewModel
 @{
     ViewData["Title"] = "Регистрация"; 
 }
