Добавлен UserService и интерфейс IUserService

--- a/MyBlog.App/Views/User/Edit.cshtml
+++ b/MyBlog.App/Views/User/Edit.cshtml
@@ -24,7 +24,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validation-unobtrusive/3.2.11/jquery.validate.unobtrusive.js"></script>
 
 <div>
-    <h1>Редактирование пользователя @Model.Login</h1>
+    <h1>Редактирование пользователя</h1>
 
     <form method="post" asp-controller="User" asp-action="Edit">
         <div asp-validation-summary="ModelOnly" class="warning"></div>
