--- a/MyBlog.App/Views/User/GetUser.cshtml
+++ b/MyBlog.App/Views/User/GetUser.cshtml
@@ -1,4 +1,4 @@
-﻿@model MyBlog.App.ViewModels.Users.UsersVIewModel
+﻿@model MyBlog.App.ViewModels.Users.UsersViewModel
 @{
     ViewData["Title"] = "Пользователи";
 }
