--- a/MyBlog.App/Views/User/Register.cshtml
+++ b/MyBlog.App/Views/User/Register.cshtml
@@ -59,7 +59,7 @@
 
         <div class="wrapper">
             <label asp-for="BirthDate"></label>
-            <input asp-for="BirthDate" />
+            <input asp-for="BirthDate" type="date" />
             <span asp-validation-for="BirthDate" class="warning"></span>
         </div>
 
