--- a/MyBlog.App/Views/Post/Create.cshtml
+++ b/MyBlog.App/Views/Post/Create.cshtml
@@ -1,3 +1,55 @@
-﻿@{
+﻿@model MyBlog.App.ViewModels.Posts.PostCreateViewModel
+@{
     ViewData["Title"] = "Создание статьи";
 }
+
+<style>
+    .wrapper {
+        display: flex;
+    }
+
+    input, textarea {
+        margin-left: 5px;
+    }
+
+    textarea{
+        resize: none;
+    }
+
+    .warning {
+        color: red;
+        font-size: 12px;
+        margin-left: 10px;
+    }
+</style>
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.19.1/jquery.validate.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validation-unobtrusive/3.2.11/jquery.validate.unobtrusive.js"></script>
+
+<div>
+    <h1>Создание статьи</h1>
+
+    <form method="post" asp-controller="Post" asp-action="CreatePost">
+        <div asp-validation-summary="ModelOnly" class="warning"></div>
+
+        <div class="wrapper">
+            <label asp-for="UsertId"></label>
+            <input asp-for="UsertId" />
+        </div>
+
+        <div class="wrapper">
+            <label asp-for="Title"></label>
+            <input asp-for="Title" />
+            <span asp-validation-for="Title" class="warning"></span>
+        </div>
+
+        <div class="wrapper">
+            <label asp-for="Content"></label>
+            <textarea asp-for="Content" rows="4" cols="80" ></textarea>
+            <span asp-validation-for="Content" class="warning"></span>
+        </div>
+
+        <button type="submit">Создать</button>
+    </form>
+</div>
