--- a/MyBlog.App/Views/Post/GetPost.cshtml
+++ b/MyBlog.App/Views/Post/GetPost.cshtml
@@ -1,4 +1,4 @@
-﻿@model MyBlog.App.ViewModels.Posts.PostsVIewModel
+﻿@model MyBlog.App.ViewModels.Posts.PostsViewModel
 @{
     ViewData["Title"] = "Список статей";
 }
