--- a/MyBlog.App/Views/User/GetUser.cshtml
+++ b/MyBlog.App/Views/User/GetUser.cshtml
@@ -41,7 +41,7 @@
                 <td>@user.SecondName</td>
                 <td>@user.LastName</td>
                 <td>@user.UserName</td>
-                <td>@user.BirthDate</td>
+                <td>@user.BirthDate.ToString("dd-MM-yyyy")</td>
                 <td>@user.Email</td>
                 <td>@user.Photo</td>
                 <td>
