--- a/MyBlog.App/Views/User/Edit.cshtml
+++ b/MyBlog.App/Views/User/Edit.cshtml
@@ -29,6 +29,8 @@
     <form method="post" asp-controller="User" asp-action="Edit">
         <div asp-validation-summary="ModelOnly" class="warning"></div>
 
+        <input type="hidden" asp-for="Id" />
+
         <div class="wrapper">
             <label asp-for="FirstName"></label>
             <input asp-for="FirstName" value="@Model.FirstName" />
