--- a/MyBlog.App/Views/Comment/GetComment.cshtml
+++ b/MyBlog.App/Views/Comment/GetComment.cshtml
@@ -46,6 +46,7 @@
                 <td>@comment.CreatedDate.ToString("dd-MM-yyyy hh:mm")</td>
                 <td>
                     <form method="post" asp-controller="Comment" asp-action="Remove" asp-route-id="@comment.Id">
+                        <input type="hidden" value="@User.Claims.FirstOrDefault(c => c.Type == "UserID")?.Value" name="UserId"/>
                         <button type="submit">Удалить</button>
                     </form>
                 </td>
