--- a/MyBlog.App/Views/Comment/Edit.cshtml
+++ b/MyBlog.App/Views/Comment/Edit.cshtml
@@ -33,6 +33,8 @@
     <form method="post" asp-controller="Comment" asp-action="Edit">
         <div asp-validation-summary="ModelOnly" class="warning"></div>
 
+        <input type="hidden" asp-for="UserId" value="@Model.UserId"/>
+
         <div class="wrapper">
             <label asp-for="Text"></label>
             <textarea asp-for="Text" rows="4" cols="80">@Model.Text</textarea>
