--- a/MyBlog.App/Views/User/Login.cshtml
+++ b/MyBlog.App/Views/User/Login.cshtml
@@ -24,7 +24,7 @@
 <div>
     <h1>Авторизация пользователя</h1>
 
-    <form method="post" asp-controller="User" asp-action="PostLogin">
+    <form method="post" asp-controller="User" asp-action="Login">
         <div asp-validation-summary="ModelOnly" class="warning"></div>
 
         <div class="wrapper">
