--- a/MyBlog.App/Views/User/Register.cshtml
+++ b/MyBlog.App/Views/User/Register.cshtml
@@ -24,7 +24,7 @@
 <div>
     <h1>Регистрация нового пользователя</h1>
 
-    <form method="post" asp-controller="User" asp-action="PostRegister">
+    <form method="post" asp-controller="User" asp-action="Register">
         <div asp-validation-summary="ModelOnly" class="warning"></div>
 
         <div class="wrapper">
