--- a/MyBlog.App/Views/Comment/GetComment.cshtml
+++ b/MyBlog.App/Views/Comment/GetComment.cshtml
@@ -46,12 +46,13 @@
                 <td>@comment.CreatedDate.ToString("dd-MM-yyyy hh:mm")</td>
                 <td>
                     <form method="post" asp-controller="Comment" asp-action="Remove" asp-route-id="@comment.Id">
-                        <input type="hidden" value="@User.Claims.FirstOrDefault(c => c.Type == "UserID")?.Value" name="UserId"/>
+                        <input type="hidden" value="@comment.UserId" name="userId"/>
                         <button type="submit">Удалить</button>
                     </form>
                 </td>
                 <td>
                     <form method="get" asp-controller="Comment" asp-action="Edit" asp-route-id="@comment.Id">
+                        <input type="hidden" value="@comment.UserId" name="userId"/>
                         <button type="submit">Редактировать</button>
                     </form>
                 </td>
