--- a/MyBlog.App/Views/Tag/Create.cshtml
+++ b/MyBlog.App/Views/Tag/Create.cshtml
@@ -30,7 +30,7 @@
 <div>
     <h1>Создание тега</h1>
 
-    <form method="post" asp-controller="Tag" asp-action="CreatePost">
+    <form method="post" asp-controller="Tag" asp-action="Create">
         <div asp-validation-summary="ModelOnly" class="warning"></div>
 
         <div class="wrapper">
