--- a/MyBlog.App/Views/Post/GetPost.cshtml
+++ b/MyBlog.App/Views/Post/GetPost.cshtml
@@ -32,6 +32,7 @@
             <th>Комментарии</th>
             <th></th>
             <th></th>
+            <th></th>
         </tr>
         @foreach(var post in Model.Posts)
         {
@@ -48,7 +49,7 @@
                 <td>
                     <details>
                         <summary>Раскрыть</summary>
-                        @string.Join(", ", post.Tags.Select(t => t.Name))
+                        @string.Join(" ", post.Tags.Select(t => t.Name))
                     </details>
                 </td>
                 <td>@post.CreatedDate.ToString("dd-MM-yyyy")</td>
