Добавлено свойство ReturnUrl для UserLoginViewModel

--- a/MyBlog.App/Views/User/Login.cshtml
+++ b/MyBlog.App/Views/User/Login.cshtml
@@ -27,6 +27,8 @@
     <form method="post" asp-controller="User" asp-action="Login">
         <div asp-validation-summary="ModelOnly" class="warning"></div>
 
+        <input type="hidden" asp-for="ReturnUrl" value="@Context.Request.Query["ReturnUrl"].ToString()"/>
+
         <div class="wrapper">
             <label asp-for="UserEmail"></label>
             <input asp-for="UserEmail" />
