--- a/MyBlog.App/Views/Shared/_Auth.cshtml
+++ b/MyBlog.App/Views/Shared/_Auth.cshtml
@@ -5,7 +5,7 @@
 @if (SignInManager.IsSignedIn(User))
 {
     <li class="nav-item">
-        <form method="post" asp-controller="User" asp-action="Logout">
+        <form method="post" asp-controller="User" asp-action="Logout" asp-route-returnUrl="@(Context.Request.Path + Context.Request.QueryString)">
             <a class="nav-link text-dark" id="logout_link" onclick="logout()">Logout</a>
         </form>
     </li>
