Футтер, Хедер, Страница авторизации

--- a/MyBlog.App/Views/Home/AccessDenied.cshtml
+++ b/MyBlog.App/Views/Home/AccessDenied.cshtml
@@ -3,5 +3,5 @@
 }
 
 <div class="text-center">
-    <h2 class="display-4">Отказано в доступе</h2>
+    <h2 class="display-5 m-5">Отказано в доступе</h2>
 </div>
