--- a/MyBlog.App/Views/User/Register.cshtml
+++ b/MyBlog.App/Views/User/Register.cshtml
@@ -3,79 +3,97 @@
     ViewData["Title"] = "Регистрация"; 
 }
 
-<style>
-    .wrapper{
-        display: flex;
-    }
-    input{
-        margin-left: 5px;
-    }
-    .warning{
-        color: red;
-        font-size: 12px;
-        margin-left: 10px;
-    }
-</style>
-
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.19.1/jquery.validate.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validation-unobtrusive/3.2.11/jquery.validate.unobtrusive.js"></script>
 
-<div>
-    <h1>Регистрация нового пользователя</h1>
+<div class="max-width-550 m-auto">
+    <form class="mt-5" method="post" asp-controller="User" asp-action="Register">
+        <h3>Регистрация пользователя</h3>
+        <hr  class="hr"/>
+        <div asp-validation-summary="ModelOnly" class="text-danger fs-6"></div>
 
-    <form method="post" asp-controller="User" asp-action="Register">
-        <div asp-validation-summary="ModelOnly" class="warning"></div>
-
-        <div class="wrapper">
-            <label asp-for="FirstName"></label>
-            <input asp-for="FirstName" />
-            <span asp-validation-for="FirstName" class="warning"></span>
+        <div class="form-group mb-4 position-relative">
+            <div class="row">
+            <label asp-for="FirstName" class="form-label col-sm-4 col-form-label"></label>
+                <div class="col-sm-8">
+                    <input asp-for="FirstName" class="form-control" />
+                </div>
+            </div>
+            <span asp-validation-for="FirstName" class="text-danger error-message"></span>
         </div>
 
-        <div class="wrapper">
-            <label asp-for="SecondName"></label>
-            <input asp-for="SecondName" />
-            <span asp-validation-for="SecondName" class="warning"></span>
+        <div class="form-group mb-4 position-relative">
+            <div class="row">
+                <label asp-for="SecondName" class="form-label col-sm-4 col-form-label"></label>
+                <div class="col-sm-8">
+                    <input asp-for="SecondName" class="form-control" />
+                </div>
+            </div>
+            <span asp-validation-for="SecondName" class="text-danger error-message"></span>
         </div>
 
-        <div class="wrapper">
-            <label asp-for="LastName"></label>
-            <input asp-for="LastName" />
-            <span asp-validation-for="LastName" class="warning"></span>
+        <div class="form-group mb-4 position-relative">
+            <div class="row">
+                <label asp-for="LastName" class="form-label col-sm-4 col-form-label"></label>
+                <div class="col-sm-8">
+                    <input asp-for="LastName" class="form-control" />
+                </div>
+            </div>
+            <span asp-validation-for="LastName" class="text-danger error-message"></span>
         </div>
 
-        <div class="wrapper">
-            <label asp-for="EmailReg"></label>
-            <input asp-for="EmailReg" />
-            <span asp-validation-for="EmailReg" class="warning"></span>
+        <div class="form-group mb-4 position-relative">
+            <div class="row">
+                <label asp-for="EmailReg" class="form-label col-sm-4 col-form-label"></label>
+                <div class="col-sm-8">
+                    <input asp-for="EmailReg" class="form-control" />
+                </div>
+            </div>
+            <span asp-validation-for="EmailReg" class="text-danger error-message"></span>
         </div>
 
-        <div class="wrapper">
-            <label asp-for="Login"></label>
-            <input asp-for="Login" />
-            <span asp-validation-for="Login" class="warning"></span>
+        <div class="form-group mb-4 position-relative">
+            <div class="row">
+                <label asp-for="Login" class="form-label col-sm-4 col-form-label"></label>
+                <div class="col-sm-8">
+                    <input asp-for="Login" class="form-control" />
+                </div>
+            </div>
+            <span asp-validation-for="Login" class="text-danger error-message"></span>
         </div>
 
-        <div class="wrapper">
-            <label asp-for="BirthDate"></label>
-            <input asp-for="BirthDate" type="date" />
-            <span asp-validation-for="BirthDate" class="warning"></span>
+        <div class="form-group mb-4 position-relative">
+            <div class="row">
+                <label asp-for="BirthDate" class="form-label col-sm-6 col-form-label"></label>
+                <div class="col-sm-6">
+                    <input asp-for="BirthDate" type="date" class="form-control" />
+                </div>
+            </div>
+            <span asp-validation-for="BirthDate" class="text-danger error-message"></span>
         </div>
 
-        <div class="wrapper">
-            <label asp-for="PasswordReg"></label>
-            <input asp-for="PasswordReg" />
-            <span asp-validation-for="PasswordReg" class="warning"></span>
+        <div class="form-group mb-4 position-relative">
+            <div class="row">
+                <label asp-for="PasswordReg" class="form-label col-sm-6 col-form-label"></label>
+                <div class="col-sm-6">
+                    <input asp-for="PasswordReg" class="form-control" />
+                </div>
+            </div>
+            <span asp-validation-for="PasswordReg" class="text-danger error-message"></span>
         </div>
 
-        <div class="wrapper">
-            <label asp-for="PasswordConfirm"></label>
-            <input asp-for="PasswordConfirm" />
-            <span asp-validation-for="PasswordConfirm" class="warning"></span>
+        <div class="form-group mb-4 position-relative">
+            <div class="row">
+                <label asp-for="PasswordConfirm" class="form-label col-sm-6 col-form-label"></label>
+                <div class="col-sm-6">
+                    <input asp-for="PasswordConfirm" class="form-control" />
+                </div>
+            </div>
+            <span asp-validation-for="PasswordConfirm" class="text-danger error-message"></span>
         </div>
 
-        <button type="submit">Регистрация</button>
+        <button type="submit" class="btn btn-primary">Зарегистрироваться</button>
     </form>
 </div>
 
