--- a/MyBlog.App/wwwroot/css/site.css
+++ b/MyBlog.App/wwwroot/css/site.css
@@ -38,17 +38,20 @@ body {
     color: #fff;
     background-color: var(--bs-gray-600);
 }
-
-.form-width-30{
-    width: 30%;
-    min-width:350px;
-    max-width:450px;
+.nav-item {
+    margin-left: 1%;
+    margin-right: 1%;
 }
-@media(max-width:400px){
-    .form-width-30{
-        width: auto;
-        min-width: initial;
-    }
+.navbar-nav.flex-grow-1{
+    margin-left: 4%;
+}
+
+
+.max-width-350 {
+    max-width: 350px;
+}
+.max-width-550 {
+    max-width: 550px;
 }
 
 .error-message {
@@ -56,7 +59,7 @@ body {
     font-size: 11px;
     right: 0;
 }
-@media(max-width: 300px){
+@media(max-width: 575.98px){
     .error-message{
         display: none;
     }
