Страница создания статьи Частичная реализация контроллера Role

--- a/MyBlog.App/Views/Home/Index.cshtml
+++ b/MyBlog.App/Views/Home/Index.cshtml
@@ -12,6 +12,6 @@
     else
     {
         <h3 class="mt-5">Все статьи</h3>
-        <a href="#" class="text-decoration-none">Добавить статью</a>
+        <a asp-action="Create" asp-controller="Post" class="text-decoration-none">Добавить статью</a>
     }
 </div>
