--- a/MyBlog.App/Views/Post/Create.cshtml
+++ b/MyBlog.App/Views/Post/Create.cshtml
@@ -3,55 +3,59 @@
     ViewData["Title"] = "Создание статьи";
 }
 
-<style>
-    .wrapper {
-        display: flex;
-    }
-
-    input, textarea {
-        margin-left: 5px;
-    }
-
-    textarea{
-        resize: none;
-    }
-
-    .warning {
-        color: red;
-        font-size: 12px;
-        margin-left: 10px;
-    }
-</style>
-
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.19.1/jquery.validate.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validation-unobtrusive/3.2.11/jquery.validate.unobtrusive.js"></script>
 
-<div>
-    <h1>Создание статьи</h1>
+<div class="max-width-450 m-auto">
+    <form class="mt-5" method="post" asp-controller="Post" asp-action="Create">
+        <h3>Добавление статьи</h3>
+        <hr class="hr" />
+        <div asp-validation-summary="ModelOnly" class="text-danger fs-6"></div>
 
-    <form method="post" asp-controller="Post" asp-action="Create">
-        <div asp-validation-summary="ModelOnly" class="warning"></div>
+        <input type="hidden" asp-for="UserId" value="@User.Claims.FirstOrDefault(c => c.Type == "UserID")?.Value"/>
+        <input type="hidden" id="post-tags" asp-for="PostTags" />
 
-        <input type="hidden" asp-for="UserId" value="@User.Claims.FirstOrDefault(c => c.Type == "UserID")?.Value" />
-
-        <div class="wrapper">
-            <label asp-for="Title"></label>
-            <input asp-for="Title" />
-            <span asp-validation-for="Title" class="warning"></span>
+        <h5 class="text-muted ms-2">Теги</h5>
+        <p class="form-text mb-1" id="add-tags">Здесь вы увидите добавленные теги</p>
+        <div class="input-group">
+            <input class="form-control form-control-sm shadow-none input-primary-board" id="filter-input" placeholder="Поиск тега" oninput="filter()" />
+            <button type="button" class="btn btn-outline-primary btn-sm shadow-none" onclick="addTag()">Добавить</button>
         </div>
 
-        <div class="wrapper">
-            <label asp-for="PostTags"></label>
-            <input asp-for="PostTags" />
+        <div class="form-group">
+            <select class="form-select form-select-sm shadow-none input-primary-board" id="tags" size="4">
+                @foreach (var tag in Model.AllTags)
+                {
+                    <option value="@tag.Id">@tag.Name</option>
+                }
+            </select>
+        </div>
+        <p class="form-text">Если вы не нашли нужный тег, <a asp-action="Create" asp-controller="Tag" class="text-decoration-none">создайте его</a></p>
+        <hr class="hr" />
+
+        <h5 class="text-muted ms-2">Статья</h5>
+        <div class="form-group mb-4 position-relative">
+            <div class="row">
+                <label asp-for="Title" class="form-label col-sm-3 col-form-label"></label>
+                <div class="col-sm-9">
+                    <input asp-for="Title" class="form-control" />
+                </div>
+            </div>
+            <span asp-validation-for="Title" class="text-danger error-message"></span>
         </div>
 
-        <div class="wrapper">
-            <label asp-for="Content"></label>
-            <textarea asp-for="Content" rows="4" cols="80" ></textarea>
-            <span asp-validation-for="Content" class="warning"></span>
+        <div class="form-group mb-4 position-relative">
+            <div class="row">
+                <label asp-for="Content" class="form-label col-sm-3 col-form-label"></label>
+                <div class="col-sm-9">
+                    <textarea asp-for="Content" class="form-control textarea" rows="4"></textarea>
+                </div>
+            </div>
+            <span asp-validation-for="Content" class="text-danger error-message"></span>
         </div>
 
-        <button type="submit">Создать</button>
+        <button type="submit" class="btn btn-primary mb-2">Добавить</button>
+        <p class="form-text"><a asp-action="GetPost" asp-controller="Post" class="text-decoration-none">Перейти к списку всех статей</a></p>
     </form>
 </div>
