--- a/MyBlog.App/Views/Shared/_Logout.cshtml
+++ b/MyBlog.App/Views/Shared/_Logout.cshtml
@@ -15,7 +15,7 @@
             <a class="nav-link" asp-action="GetUser" asp-controller="User">Пользователи</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" asp-action="GetRoles" asp-controller="User">Роли</a>
+            <a class="nav-link" asp-action="GetRole" asp-controller="Role">Роли</a>
         </li>
     </ul>
 
