--- a/MyBlog.App/Views/User/Edit.cshtml
+++ b/MyBlog.App/Views/User/Edit.cshtml
@@ -3,76 +3,106 @@
     ViewData["Title"] = "Редактирование пользователя";
 }
 
-<style>
-    .wrapper {
-        display: flex;
-    }
-
-    input {
-        margin-left: 5px;
-    }
-
-    .warning {
-        color: red;
-        font-size: 12px;
-        margin-left: 10px;
-    }
-</style>
-
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.19.1/jquery.validate.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validation-unobtrusive/3.2.11/jquery.validate.unobtrusive.js"></script>
 
-<div>
-    <h1>Редактирование пользователя</h1>
-
-    <form method="post" asp-controller="User" asp-action="Edit">
-        <div asp-validation-summary="ModelOnly" class="warning"></div>
+<div class="max-width-550 m-auto">
+    <form class="mt-5" method="post" asp-controller="User" asp-action="Edit">
+        <h3>Редактирование пользователя</h3>
+        <hr class="hr" />
+        <div asp-validation-summary="ModelOnly" class="text-danger fs-6"></div>
 
         <input type="hidden" asp-for="Id" />
 
-        <div class="wrapper">
-            <label asp-for="FirstName"></label>
-            <input asp-for="FirstName" value="@Model.FirstName" />
-            <span asp-validation-for="FirstName" class="warning"></span>
+        @if (User.IsInRole("Admin"))
+        {
+            <div class="row">
+                @foreach (var role in Model.AllRoles!)
+                {
+                    <div class="col-md-3 col-sm-4">
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" id="@role.Key" @(role.Key == "User" ? "disabled" : "")
+                                   name="@($"role{@role.Key}")" @(role.Value ? "checked" : "") />
+                            <label class="from-check-label @(role.Key == "User" ? "text-secondary" : "")" for="@role.Key">
+                                @role.Key
+                            </label>
+                        </div>
+                    </div>
+                }
+            </div>
+            <hr class="hr"/>
+        }
+
+        <div class="form-group mb-4 position-relative">
+            <div class="row">
+                <label asp-for="FirstName" class="form-label col-sm-3 col-form-label"></label>
+                <div class="col-sm-9">
+                    <input asp-for="FirstName" class="form-control" />
+                </div>
+            </div>
+            <span asp-validation-for="FirstName" class="text-danger error-message"></span>
         </div>
 
-        <div class="wrapper">
-            <label asp-for="SecondName"></label>
-            <input asp-for="SecondName" value="@Model.SecondName" />
-            <span asp-validation-for="SecondName" class="warning"></span>
+        <div class="form-group mb-4 position-relative">
+            <div class="row">
+                <label asp-for="SecondName" class="form-label col-sm-3 col-form-label"></label>
+                <div class="col-sm-9">
+                    <input asp-for="SecondName" class="form-control" />
+                </div>
+            </div>
+            <span asp-validation-for="SecondName" class="text-danger error-message"></span>
         </div>
 
-        <div class="wrapper">
-            <label asp-for="LastName"></label>
-            <input asp-for="LastName" value="@Model.LastName" />
-            <span asp-validation-for="LastName" class="warning"></span>
+        <div class="form-group mb-4 position-relative">
+            <div class="row">
+                <label asp-for="LastName" class="form-label col-sm-3 col-form-label"></label>
+                <div class="col-sm-9">
+                    <input asp-for="LastName" class="form-control" />
+                </div>
+            </div>
+            <span asp-validation-for="LastName" class="text-danger error-message"></span>
         </div>
 
-        <div class="wrapper">
-            <label asp-for="Email"></label>
-            <input asp-for="Email" value="@Model.Email" />
-            <span asp-validation-for="Email" class="warning"></span>
+        <div class="form-group mb-4 position-relative">
+            <div class="row">
+                <label asp-for="Email" class="form-label col-sm-3 col-form-label"></label>
+                <div class="col-sm-9">
+                    <input asp-for="Email" class="form-control" />
+                </div>
+            </div>
+            <span asp-validation-for="Email" class="text-danger error-message"></span>
         </div>
 
-        <div class="wrapper">
-            <label asp-for="BirthDate"></label>
-            <input asp-for="BirthDate" value="@Model.BirthDate.ToString("yyyy-MM-dd")" type="date" />
-            <span asp-validation-for="BirthDate" class="warning"></span>
+        <div class="form-group mb-4 position-relative">
+            <div class="row">
+                <label asp-for="BirthDate" class="form-label col-sm-3 col-form-label"></label>
+                <div class="col-sm-6">
+                    <input asp-for="BirthDate" type="date" class="form-control" />
+                </div>
+            </div>
+            <span asp-validation-for="BirthDate" class="text-danger error-message"></span>
         </div>
 
-        <div class="wrapper">
-            <label asp-for="Login"></label>
-            <input asp-for="Login" value="@Model.Login" />
-            <span asp-validation-for="Login" class="warning"></span>
+        <div class="form-group mb-4 position-relative">
+            <div class="row">
+                <label asp-for="Login" class="form-label col-sm-3 col-form-label"></label>
+                <div class="col-sm-9">
+                    <input asp-for="Login" class="form-control" />
+                </div>
+            </div>
+            <span asp-validation-for="Login" class="text-danger error-message"></span>
         </div>
 
-        <div class="wrapper">
-            <label asp-for="Photo"></label>
-            <input asp-for="Photo" value="@Model.Photo" />
-            <span asp-validation-for="Photo" class="warning"></span>
+        <div class="form-group mb-4 position-relative">
+            <div class="row">
+                <label asp-for="Photo" class="form-label"></label>
+                <input asp-for="Photo" class="form-control" />
+            </div>
+            <span asp-validation-for="Photo" class="text-danger error-message"></span>
         </div>
 
-        <button type="submit">Сохранить</button>
+        <button type="submit" class="btn btn-primary mb-2">Сохранить</button>
+        <p class="form-text"><a asp-action="Index" asp-controller="Home" class="text-decoration-none">Выйти без сохранения</a></p>
     </form>
 </div>
