Реализована логика удаления тегов из статьи Страница редактирования статьи

--- a/MyBlog.App/Views/Post/Create.cshtml
+++ b/MyBlog.App/Views/Post/Create.cshtml
@@ -17,7 +17,7 @@
         <input type="hidden" id="post-tags" asp-for="PostTags" />
 
         <h5 class="text-muted ms-2">Теги</h5>
-        <p class="form-text mb-1" id="add-tags">Здесь вы увидите добавленные теги</p>
+        <div class="form-text mb-1" id="add-tags">Здесь вы увидите добавленные теги</div>
         <div class="input-group">
             <input class="form-control form-control-sm shadow-none input-primary-board" id="filter-input" placeholder="Поиск тега" oninput="filter()" />
             <button type="button" class="btn btn-outline-primary btn-sm shadow-none" onclick="addTag()">Добавить</button>
