--- a/MyBlog.App/Views/Shared/_Layout.cshtml
+++ b/MyBlog.App/Views/Shared/_Layout.cshtml
@@ -18,7 +18,7 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
-                    <partial name="_Logout" />
+                    <partial name="_Navbar" />
                 </div>
             </div>
         </nav>
