--- a/MyBlog.App/Views/Shared/_Navbar.cshtml
+++ b/MyBlog.App/Views/Shared/_Navbar.cshtml
@@ -14,9 +14,12 @@
         <li class="nav-item">
             <a class="nav-link" asp-action="GetUser" asp-controller="User">Пользователи</a>
         </li>
-        <li class="nav-item">
-            <a class="nav-link" asp-action="GetRole" asp-controller="Role">Роли</a>
-        </li>
+        @if (User.IsInRole("Admin"))
+        {
+            <li class="nav-item">
+                <a class="nav-link" asp-action="GetRole" asp-controller="Role">Роли</a>
+            </li>
+        }
     </ul>
 
     <ul class="navbar-nav">
